# SSAPT

./: .gitignore  ARCHITECTURE.md  BSOD_PROTECTION.md  BUILD.md  CHANGES.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  QUICKSTART.md  README.md  SAFETY_FEATURES.md  SECURITY.md  SSDT_IMPLEMENTATION.md  SUMMARY.md  TECHNICAL.md  USAGE.md  control_app.cpp  driver.cpp  driver.cpp.deprecated  driver.h  driver_manager.bat  dx_hooks.cpp  example.cpp  inject.py.deprecated  kernel_driver.c  sources  ssapt.inf  test_driver.cpp  test_safety.cpp
